src/styles/calendar.css
:root,
[data-selected-theme="light"] {
    --background: #D0D7FF;
	--left-background: white;
    --date-background: #bac5ff;
    --add-task-color: #909090;
    --task-hover: #f0f0f0;
    --text-color: #1e1e1e;
	--navbar-color: #978EEB;
	--calendar-color: #ECECEC;
	--calendar-nav-button: grey;
}

[data-selected-theme="dark"] {
    --background: #252525;
	--left-background: #1B2655;
	--dark-background: url('../assets/background-dark.png');
    --date-background: rgb(0, 3, 53);
    --add-task-color: #d9d9d9;
    --task-hover: #c0bfbf;
    --text-color: #f4f4f4;
	--navbar-color: #161E28;
	--upcoming-color: #161E28;
	--calendar-nav-button: rgb(0, 3, 53);
}

body {
    font-family: 'Radio Canada', Arial, Helvetica, sans-serif;
}

/* Style and transition animation for main */
main {
    display: flex;
    flex-direction: column;
	background-image: var(--dark-background);
    background-color: var(--background);
    /*------ This set the main absolute position --------*/
    position: absolute; 
    right: 0;
    /*------ If something wrong might be this --------*/
    transition: width 0.3s ease;
	height: 100%;
}

.calendar-container {
	background-image: var(--dark-background);
	display: flex;
	overflow: hidden;
	padding-left: 15px;
}
#main-page{
	overflow: hidden;
}
/* Calendar container */
.left-container {
	min-width: 20vw;
	background: var(--left-background);
	padding: 15px;
	width: 0.3w;
	/* margin: 0 auto; */
	/* overflow-y: hidden; */
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
	/* display: inline-block; */
	display: flex;
	flex-direction: column;
	align-items: center;
    min-height: 90%;
	align-items: center;
	overflow: scroll;
	color: var(--text-color);
}

/* media query for screen changes for responsiveness */
@media only screen and (max-width: 940px) {
	.container {
		flex-direction: column;
		overflow: unset;
	}

	.left-container {
		min-height: unset;
	}
}

#create-calendar-task {
	background-color: lightgray;
	border: none;
	padding: 15px 32px;
	font-size: larger;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	border-radius: 5%;
	margin: 5% 0% 10% 0%;
}

#create-calendar-task:hover {
	background-color: darkgray;
}

#month-and-year {
	color: var(--text-color);
}

.right-container {
	min-width: 50vw;
    padding-left: 10px;
	overflow: scroll;
	color: var(--text-color);
}

.day-header {
	font-size: larger;
	font-weight: bold;
	text-align: center;
}

.time {
	font-size: large;
	font-weight: 500;
	vertical-align: top;
	text-align: center;
	height: 40px;
}

.hour {
	border-top: solid 0.5px;
}

/* table, tr, th, td {
	border: 0.5px solid black;
} */

table {
	border-collapse: collapse;
}

#weekly-details td {
	width: 50px;
	height: 40px;
}

.day-detail h2 {
	text-align: center;
}


#weekly-details thead {
	position: sticky;
	top: 0;
	z-index: 10;
}

th.day-detail {
	background-color: var(--date-background);
}

.day-detail {
	min-width: 8vw;
}

.weekly-container {
	padding-top: 2%;
	/* overflow-y: auto; */
}

#allday-tasks {
	text-align: center;	
	background-color: var(--navbar-color);
}

/* Test task coloring */
.task{
    border-radius: 5%;
    background-color: red; /*default but shoudld be overwritten*/
    text-align: center;
    color: white;
    width: 50px;  /*default but shoudld be overwritten*/
    height: 40px; /*default but shoudld be overwritten*/
	word-wrap: break-word; 
    white-space: normal;  
    overflow-wrap: break-word;
	overflow: hidden;
	border: 1px solid #e3e3e3;
}

.overlap-task {
	background-color: green;
	color: white;
	text-align: center;
	border-radius: 5%;
	max-width: 50px;
}


#upcoming-container {
	width: 100%;
	align-items: center;
}

.upcoming {
	border-radius: 5%;
	padding: 1%;
	border: green 2px solid;
	text-align: center;
	font-size: small;
	margin-bottom: 2%;
	background-color: var(--upcoming-color);
}

.left-container h3 {
    padding: 10px;
    text-align: center;
}

/* Buttons in the calendar */
.button-container-calendar button {
	cursor: pointer;
	background: var(--calendar-nav-button);
	color: #fff;
	border: 1px solid grey;
	border-radius: 4px;
	padding: 5px 10px;
}

/* Calendar table */
.table-calendar {
	background-color: var(--calendar-color);
	color: black;
	border-collapse: collapse;
	width: 100%;
}

.table-calendar td,
.table-calendar th {
	padding: 5px;
	border: 1px solid #e2e2e2;
	text-align: center;
	vertical-align: top;
}

/* Date picker */
.date-picker.selected {
	background-color: #f2f2f2;
	font-weight: bold;
	outline: 1px dashed #00BCD4;
}

.date-picker.selected span {
	border-bottom: 2px solid currentColor;
}

/* Sunday Style */
.date-picker:nth-child(1) {
	color: red;
}

/* Saturday Style */
.date-picker:nth-child(7) {
	color: blue;
}

/* Hover effect for date cells */
.date-picker:hover {
	background-color: #102937;
	color: white;
	cursor: pointer;
}

/* Navigation buttons */
.button-container-calendar {
	position: relative;
	margin-bottom: 1em;
	overflow: hidden;
	clear: both;
}

#previous {
	float: left;
}

#next {
	float: right;
}

/* Footer styling */
.footer-container-calendar {
	margin-top: 1em;
	border-top: 1px solid #dadada;
	padding: 10px 0;
}

.footer-container-calendar select {
	cursor: pointer;
	background: #ffffff;
	color: #585858;
	border: 1px solid #bfc5c5;
	border-radius: 3px;
	padding: 5px 1em;
}

.hourly-schedule {
	margin-top: 5%;
    max-height: 80vh;
}

